<resources>
    <string name="app_name">Rutgers Cafe</string>
    <string name="your_cart">Your Cart</string>
    <string name="store_orders">Store Orders</string>
    <string name="order_coffees">Order Coffees</string>
    <string name="order_donuts">Order Donuts</string>
    <string name="add_donut">Add Donut</string>
    <string name="donut_type">Donut Type</string>
    <string name="donutPicture">donutPicture</string>
    <string name="donutQuantity">Quantity</string>
    <string name="number_of_donuts">Number of Donuts</string>
    <string name="selected_flavor">Selected Flavor:</string>
    <string name="quantity">Quantity:</string>
    <string name="add_donut_to_order">Add Donut</string>
    <string name="selected_type">Selected Type:</string>
    <string name="subtotal">Subtotal:</string>
    <string name="delete_item">Delete Item</string>
    <string name="submit_order">Submit Order</string>
    <string name="coffee_and_donut">Coffee and Donut</string>
    <string name="tax_6_25">Tax (6.25%):</string>
    <string name="textview">TextView</string>
    <string name="grand_total">Grand Total:</string>
    <string name="coffee_picture">coffee picture</string>
    <string name="caramel">Caramel</string>
    <string name="cream">Cream</string>
    <string name="milk">Milk</string>
    <string name="syrup">Syrup</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="coffee_size">Size</string>
    <string name="number_of_coffee">#</string>
    <string name="button">Button</string>
    <string name="view_order">View Order</string>
    <string name="delete_order">Delete Order</string>
    <string name="ordernum">Order#</string>
    <string name="current_donut_order">Current Donut Order</string>
    <string name="add_to_order">Add To Order</string>
    <string name="delete_donut">Delete Donut</string>
    <string name="add_to_cart">Add To Cart</string>
    <string-array name="donut_types">
        <item>Yeast Donut</item>
        <item>Cake Donut</item>
        <item>Donut Hole</item>
    </string-array>
    ]
    <string-array name="coffee_sizes">
        <item>Short</item>
        <item>Tall</item>
        <item>Grande</item>
        <item>Venti</item>
    </string-array>
</resources>