<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoffeeActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="232dp"
        android:layout_height="130dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/coffee_picture"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coffee" />

    <CheckBox
        android:id="@+id/cb_caramel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="48dp"
        android:text="@string/caramel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <CheckBox
        android:id="@+id/cb_cream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cream"
        app:layout_constraintStart_toStartOf="@+id/cb_caramel"
        app:layout_constraintTop_toBottomOf="@+id/cb_caramel" />

    <CheckBox
        android:id="@+id/cb_milk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/milk"
        app:layout_constraintStart_toStartOf="@+id/cb_cream"
        app:layout_constraintTop_toBottomOf="@+id/cb_cream" />

    <CheckBox
        android:id="@+id/cb_syrup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/syrup"
        app:layout_constraintStart_toStartOf="@+id/cb_milk"
        app:layout_constraintTop_toBottomOf="@+id/cb_milk" />

    <CheckBox
        android:id="@+id/cb_whippedcream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whipped_cream"
        app:layout_constraintStart_toStartOf="@+id/cb_syrup"
        app:layout_constraintTop_toBottomOf="@+id/cb_syrup" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="32dp"
        android:text="@string/order_coffees"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="88dp"
        android:text="@string/coffee_size"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Spinner
        android:id="@+id/sp_coffeeSize"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginEnd="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="70dp"
        android:layout_height="25dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="68dp"
        android:text="@string/quantity"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_coffeeSize" />

    <EditText
        android:id="@+id/etn_coffeeQuantity"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="68dp"
        android:ems="10"
        android:hint="@string/number_of_coffee"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_addCoffeeOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="80dp"
        android:text="@string/add_to_cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>